# fireproof

./: .gitignore  LICENSE  README.md  default.nix  fireproof.cabal
src/: Adapter.hs  Logic.hs  Main.hs  Model.hs
test/: Spec.hs
