name:                fireproof
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/konr/fireproof#readme
license:             BSD3
license-file:        LICENSE
author:              Konrad Scorciapino
maintainer:          scorciapino@gmail.com
copyright:           2018 Konrad
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable fireproof
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
