name:                fireproof
version:             0.1.0
homepage:            https://github.com/konr/fireproof#readme
license:             BSD3
license-file:        LICENSE
author:              Konrad Scorciapino
maintainer:          scorciapino@gmail.com
copyright:           2018 Konrad Scorciapino
category:            Finance
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Adapter, Logic, Model
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable fireproof
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Adapter, Logic, Model
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , cmdargs == 0.10.20
                     , fireproof

test-suite fireproof-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , fireproof
                     , hspec == 2.4.8
  default-language:    Haskell2010
